[package]
name = "arr_ty"
version = "0.1.0"
authors = ["Nossie531"]
edition = "2021"
description = "Macros for smart array initialization (best for trait object element types)."
repository = "https://github.com/nossie531/arr_ty"
license = "MIT OR Apache-2.0"
keywords = ["macro", "array", "trait"]
categories = ["no-std", "rust-patterns"]
